--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=application
+
+#MySQL Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3305/mydb
+spring.datasource.username=root
+spring.datasource.password=system
+
+
+#hibernate ddl auto (create , create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+
+#Display Application warn and errors and info
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.Type=TRACE
