--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=application
 
 #MySQL Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3305/mydb
-spring.datasource.username=root
-spring.datasource.password=system
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mydb
+spring.datasource.username=username
+spring.datasource.password=password
 
 #hibernate ddl auto (create , create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #Display Application warn and errors and info
 logging.level.org.hibernate.SQL=DEBUG
