--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=application
 
+spring.devtools.restart.enabled=false
+
 #MySQL Database configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=username
 spring.datasource.password=password
 
