--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=username
 spring.datasource.password=password
 
 #hibernate ddl auto (create , create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #Display Application warn and errors and info
 logging.level.org.hibernate.SQL=DEBUG
