--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=application
 spring.devtools.restart.enabled=false
 
 #MySQL Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb
+#spring.datasource.url=jdbc:mysql://db:3306/mydb
 spring.datasource.username=username
 spring.datasource.password=password
 
