--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,20 @@ spring.application.name=application
 spring.devtools.restart.enabled=false
 
 #MySQL Database configuration
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb
-#spring.datasource.url=jdbc:mysql://db:3306/mydb
-spring.datasource.username=username
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mydb
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=username
+#spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://gus-chess-db-1.c92yc42i0dkf.eu-west-2.rds.amazonaws.com:3306/mydb
+
+spring.datasource.url=${mysql-datasource}
+spring.datasource.username=${mysql-username}
+spring.datasource.password=${mysql-password}
+
 
 #hibernate ddl auto (create , create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${mysql-update-mode}
 
 #Display Application warn and errors and info
 logging.level.org.hibernate.SQL=DEBUG
