--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,20 @@ spring.devtools.restart.enabled=false
 #spring.datasource.password=password
 #spring.datasource.url=jdbc:mysql://gus-chess-db-1.c92yc42i0dkf.eu-west-2.rds.amazonaws.com:3306/mydb
 
-spring.datasource.url=${mysql-datasource}
-spring.datasource.username=${mysql-username}
-spring.datasource.password=${mysql-password}
+#spring.datasource.url=${mysql-datasource}
+#spring.datasource.username=${mysql-username}
+#spring.datasource.password=${mysql-password}
 
 
 #hibernate ddl auto (create , create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=${mysql-update-mode}
+#spring.jpa.hibernate.ddl-auto=${mysql-update-mode}
+
+spring.datasource.url=jdbc:sqlite::memory:
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=sa
+spring.datasource.password=password
 
 #Display Application warn and errors and info
 logging.level.org.hibernate.SQL=DEBUG
