--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the app.ja
       run: mvn clean package -DskipTests
+
+    - name: Upload JAR file as artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-application-jar
+        path: target/application-0.0.1-SNAPSHOT.jar
