--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,34 +1,41 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
-name: Maven Package
+name: Docker Image CI
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - uses: actions/checkout@v4
+      - name: Build the app.jar
+        run: mvn clean package -DskipTests
 
-    - name: Build with Maven
-      run: mvn -B package -DskipTests --file pom.xml
+#      - name: Upload JAR file as artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: my-application-jar
+#          path: target/application-0.0.1-SNAPSHOT.jar
+            
+      # Step 4: Log in to GitHub Container Registry (GHCR)
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}  # Use GitHub username (will automatically resolve)
+          password: ${{ secrets.GHCR_TOKEN }}  # Use the secret GitHub token
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      # Step 5: Build the Docker image
+      - name: Build Docker Image
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}/gus-chess:latest .
+
+      # Step 6: Push the Docker image to GitHub Container Registry
+      - name: Push Docker Image to GitHub Container Registry
+        run: |
+          docker push ghcr.io/${{ github.repository }}/gus-chess:latest
