--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,13 +22,13 @@ jobs:
 #          name: my-application-jar
 #          path: target/application-0.0.1-SNAPSHOT.jar
             
-      # Step 4: Log in to GitHub Container Registry (GHCR)
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}  # Use GitHub username (will automatically resolve)
-          password: ${{ secrets.GHCR_TOKEN }}  # Use the secret GitHub token
+#      # Step 4: Log in to GitHub Container Registry (GHCR)
+#      - name: Log in to GitHub Container Registry
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}  # Use GitHub username (will automatically resolve)
+#          password: ${{ secrets.GHCR_TOKEN }}  # Use the secret GitHub token
 
       # Step 5: Build the Docker image
       - name: Build Docker Image
