--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -33,7 +33,7 @@ jobs:
       # Step 5: Build the Docker image
       - name: Build Docker Image
         run: |
-          docker buildx build --platform linux/arm64 -t ghcr.io/${{ github.actor }}/gus-chess:latest .
+          docker build -t ghcr.io/${{ github.actor }}/gus-chess:latest .
 
       # Step 6: Push the Docker image to GitHub Container Registry
       - name: Push Docker Image to GitHub Container Registry
